almost complete login page

--- a/src/pages/Login/style.styl
+++ b/src/pages/Login/style.styl
@@ -3,11 +3,12 @@
   margin: 160px auto 0 auto
   .input-container
     background-color: #fff
-    border: 1px solid #fff
     padding: 5px 10px
     border-radius: 5px
     overflow: hidden
     input
+      border: 0
+      outline: none
       font-size: 16px
       display: block
     i
@@ -17,6 +18,8 @@
       margin-top: 3px
   .phone-container
     input
+      border: 0
+      outline: none
       margin-left: 20px
   .password-container
     margin-top: 10px
