--- a/src/components/Header/style.styl
+++ b/src/components/Header/style.styl
@@ -1,20 +1,17 @@
-#common-header {
-    background-color: rgb(233, 32, 61);
-    color: #fff;
-    padding: 15px 10px;
-    text-align: center;
-    position: relative;
+#common-header
+  background-color: rgb(233, 32, 61);
+  color: #fff;
+  padding: 15px 10px;
+  text-align: center;
+  position: relative;
 
-    h1 {
-        display: inline;
-        font-size: 16px;
-        line-height: 1;
-    }
-    
-    .back-icon {
-        width: 16px;
-        height: 16px;
-        position: absolute;
-        left: 10px;
-    }
-}
+  h1
+    display: inline;
+    font-size: 16px;
+    line-height: 1;
+
+  .back-icon
+    width: 16px;
+    height: 16px;
+    position: absolute;
+    left: 10px;
