--- a/src/components/HomeHeader/style.styl
+++ b/src/components/HomeHeader/style.styl
@@ -1,5 +1,7 @@
 #home-header
-  background-color: rgb(233, 32, 61)
+  .red
+    background-color: #e9203d
+  background-color: #e9203d
   padding: 10px
   *
     color: #fff
